--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,23 +1,9 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: backstage
-  description: |
-    Backstage is an open-source developer portal that puts the developer experience first.
-  links:
-    - title: Website
-      url: http://backstage.io
-    - title: Documentation
-      url: https://backstage.io/docs
-    - title: Storybook
-      url: https://backstage.io/storybook
-    - title: Discord Chat
-      url: https://discord.com/invite/EBHEGzX
-  annotations:
-    github.com/project-slug: backstage/backstage
-    backstage.io/techdocs-ref: dir:.
-    lighthouse.com/website-url: https://backstage.io
+  name: terroir-tracking-web
+  description: Find where your juice comes from
 spec:
-  type: library
-  owner: CNCF
-  lifecycle: experimental
+  type: website
+  lifecycle: production
+  owner: tracking-team
